--- a/LaMarqueza/Templates/CrearProductos.html
+++ b/LaMarqueza/Templates/CrearProductos.html
@@ -2,39 +2,74 @@
 {% load static %}
 
 {% block Administrador %}
-    
-<form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/Estilos.css' %}">
+<div class="container">
+    <div class="form-container">
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
 
-        {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+            {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
                 {% endfor %}
-        </ul>
-        {% endif %}
-       
-        <label for="nombre_pro">Nombre del Producto:</label><br>
-        <input type="text" id="nombre_pro" name="nombre_pro" value="{{ producto.nombre_pro }}"><br>
-        <label for="descripcion_pro">Descripción:</label><br>
-        <input type="text" id="descripcion_pro" name="descripcion_pro" value="{{ producto.descripcion_pro }}"><br>
-        <label for="precio_pro">Precio:</label><br>
-        <input type="text" id="precio_pro" name="precio_pro" value="{{ producto.precio_pro }}"><br>
-        <label for="stock_pro">Stock:</label><br>
-        <input type="text" id="stock_pro" name="stock_pro" value="{{ producto.stock_pro }}"><br>
-        <label for="categoria_pro">Categoría:</label><br>
-        <select id="categoria_pro" name="categoria_pro">
-            {% for categoria in categorias %}
-            <option value="{{ categoria.ID_CATEGORIA_CAT }}">{{ categoria.NOMBRE_CAT }}</option>
-            {% endfor %}
-        </select><br>
-        <label for="foto_pro">Foto:</label><br>
-        <input type="file" id="foto_pro" name="foto_pro"><br>
-        <label for="foto_pro">La imagen debe de tener un tamaño 500px x 500px:</label><br>
-        <label for="estado_pro">Estado:</label><br>
-        <input type="checkbox" id="estado_pro" name="estado_pro" {% if usuario.is_staff %}checked{% endif %}><br>
-        <br>
-        <input type="submit" name="action" value="Crear Producto">
-    </form>
+            </ul>
+            {% endif %}
+
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="nombre_pro">Nombre del Producto:</label>
+                    <input type="text" id="nombre_pro" name="nombre_pro" value="{{ producto.nombre_pro }}" class="form-control">
+                </div>
+
+                <div class="form-group">
+                    <label for="descripcion_pro">Descripción:</label>
+                    <input type="text" id="descripcion_pro" name="descripcion_pro" value="{{ producto.descripcion_pro }}" class="form-control">
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="precio_pro">Precio:</label>
+                    <input type="text" id="precio_pro" name="precio_pro" value="{{ producto.precio_pro }}" class="form-control">
+                </div>
+
+                <div class="form-group">
+                    <label for="stock_pro">Stock:</label>
+                    <input type="text" id="stock_pro" name="stock_pro" value="{{ producto.stock_pro }}" class="form-control">
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="categoria_pro">Categoría:</label>
+                    <select id="categoria_pro" name="categoria_pro" class="form-control">
+                        {% for categoria in categorias %}
+                        <option value="{{ categoria.ID_CATEGORIA_CAT }}">{{ categoria.NOMBRE_CAT }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="foto_pro">Foto:</label>
+                    <input type="file" id="foto_pro" name="foto_pro" class="form-control">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="foto_pro">Tamaño recomendado: 500px x 500px:</label>
+            </div>
+
+            <div class="form-group">
+                <label for="estado_pro">Estado:</label>
+                <input type="checkbox" id="estado_pro" name="estado_pro" {% if usuario.is_staff %}checked{% endif %}>
+            </div>
+
+            <div class="form-actions">
+                <button type="submit" class="btn">Crear Producto</button>
+            </div>
+        </form>
+    </div>
+</div>
 
 {% endblock Administrador %}
