--- a/LaMarqueza/Templates/CrearUsuario.html
+++ b/LaMarqueza/Templates/CrearUsuario.html
@@ -2,45 +2,74 @@
 {% load static %}
 
 {% block Administrador %}
-    
-<form method="post">
-    {% csrf_token %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/Estilos.css' %}">
 
-    {% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-        <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-    <label for="id_usuario_usu">ID:</label><br>
-    <input type="text" id="id_usuario_usu" name="id_usuario_usu" value="{{ usuario.id_usuario_usu }}"><br>
-    <span id="idError" style="color: red; display: none;"></span><br>
-    
-    <label for="nombre_usu">Nombre:</label><br>
-    <input type="text" id="nombre_usu" name="nombre_usu" value="{{ usuario.nombre_usu }}"><br>
-    <span id="nombreError" style="color: red; display: none;"></span><br>
-    
-    <label for="apellido_usu">Apellido:</label><br>
-    <input type="text" id="apellido_usu" name="apellido_usu" value="{{ usuario.apellido_usu }}"><br>
-    <span id="apellidoError" style="color: red; display: none;"></span><br>
-    
-    <label for="correo_usu">Correo:</label><br>
-    <input type="text" id="correo_usu" name="correo_usu" value="{{ usuario.correo_usu }}"><br>
-    <span id="correoError" style="color: red; display: none;"></span><br>
-    
-    <label for="telefono_usu">Teléfono:</label><br>
-    <input type="text" id="telefono_usu" name="telefono_usu" value="{{ usuario.telefono_usu }}"><br>
-    <span id="telefonoError" style="color: red; display: none;"></span><br>
-    
-    <label for="password_usu">Contraseña:</label><br>
-    <input type="password" id="password_usu" name="password_usu"><br>
-    <span id="passwordError" style="color: red; display: none;"></span><br>
-    
-    <label for="is_staff">Staff:</label><br>
-    <input type="checkbox" id="is_staff" name="is_staff" {% if usuario.is_staff %}checked{% endif %}><br>
-    <input type="submit" name="action" value="Crear Usuario" disabled>
-</form>
+<div class="container">
+    <div class="form-container">
+        <form method="post">
+            {% csrf_token %}
+
+            {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="id_usuario_usu">ID:</label>
+                    <input type="text" id="id_usuario_usu" name="id_usuario_usu" value="{{ usuario.id_usuario_usu }}" class="form-control">
+                    <span id="idError" class="error-message" style="display: none;"></span>
+                </div>
+                
+                <div class="form-group">
+                    <label for="nombre_usu">Nombre:</label>
+                    <input type="text" id="nombre_usu" name="nombre_usu" value="{{ usuario.nombre_usu }}" class="form-control">
+                    <span id="nombreError" class="error-message" style="display: none;"></span>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="apellido_usu">Apellido:</label>
+                    <input type="text" id="apellido_usu" name="apellido_usu" value="{{ usuario.apellido_usu }}" class="form-control">
+                    <span id="apellidoError" class="error-message" style="display: none;"></span>
+                </div>
+
+                <div class="form-group">
+                    <label for="correo_usu">Correo:</label>
+                    <input type="text" id="correo_usu" name="correo_usu" value="{{ usuario.correo_usu }}" class="form-control">
+                    <span id="correoError" class="error-message" style="display: none;"></span>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="telefono_usu">Teléfono:</label>
+                    <input type="text" id="telefono_usu" name="telefono_usu" value="{{ usuario.telefono_usu }}" class="form-control">
+                    <span id="telefonoError" class="error-message" style="display: none;"></span>
+                </div>
+
+                <div class="form-group">
+                    <label for="password_usu">Contraseña:</label>
+                    <input type="password" id="password_usu" name="password_usu" class="form-control">
+                    <span id="passwordError" class="error-message" style="display: none;"></span>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="is_staff">Staff:</label>
+                <input type="checkbox" id="is_staff" name="is_staff" {% if usuario.is_staff %}checked{% endif %}>
+            </div>
+
+            <div class="form-actions">
+                <input type="submit" name="action" value="Crear Usuario" class="btn" disabled>
+            </div>
+        </form>
+    </div>
+</div>
 
 <!-- Importar el archivo JavaScript -->
 <script src="{% static 'js/validaciones.js' %}"></script>
