--- a/LaMarqueza/Templates/ProductoDetalles.html
+++ b/LaMarqueza/Templates/ProductoDetalles.html
@@ -2,51 +2,84 @@
 {% load static %}
 
 {% block Administrador %}
-    
-<form method="post" enctype="multipart/form-data">
+<link rel="stylesheet" type="text/css" href="{% static 'css/Estilos.css' %}">
+
+
+<div class="form-container">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
 
         {% if messages %}
         <ul class="messages">
             {% for message in messages %}
             <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-                {% endfor %}
+            {% endfor %}
         </ul>
         {% endif %}
-        <label for="id_producto">ID del Producto:</label><br>
-        <input type="text" id="id_producto" name="id_producto" value="{{ producto.id_producto_pro }}" readonly title="Ingrese un nombre menor a 50 caracteres y que no contenga caracteres especiales "><br>
-        <label for="nombre_pro">Nombre del Producto:</label><br>
-        <input type="text" id="nombre_pro" name="nombre_pro" value="{{ producto.nombre_pro }}"><br>
-        <label for="descripcion_pro">Descripción:</label><br>
-        <input type="text" id="descripcion_pro" name="descripcion_pro" value="{{ producto.descripcion_pro }}"><br>
-        <label for="precio_pro">Precio:</label><br>
-        <input type="text" id="precio_pro" name="precio_pro" value="{{ producto.precio_pro }}"><br>
-        <label for="existencia_pro">Existencias:</label><br>
-        <input type="text" id="existencia_pro" name="existencia_pro" value="{{ producto.existencia_pro }}"><br>
 
+        <div class="form-row">
+            <div class="form-group">
+                <label for="id_producto">ID del Producto:</label>
+                <input type="text" id="id_producto" name="id_producto" value="{{ producto.id_producto_pro }}" readonly class="form-control" title="Ingrese un nombre menor a 50 caracteres y que no contenga caracteres especiales">
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group">
+                <label for="nombre_pro">Nombre del Producto:</label>
+                <input type="text" id="nombre_pro" name="nombre_pro" value="{{ producto.nombre_pro }}" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="descripcion_pro">Descripción:</label>
+                <input type="text" id="descripcion_pro" name="descripcion_pro" value="{{ producto.descripcion_pro }}" class="form-control">
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group">
+                <label for="precio_pro">Precio:</label>
+                <input type="text" id="precio_pro" name="precio_pro" value="{{ producto.precio_pro }}" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="existencia_pro">Existencias:</label>
+                <input type="text" id="existencia_pro" name="existencia_pro" value="{{ producto.existencia_pro }}" class="form-control">
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group">
+                <label for="categoria_pro">Categoría:</label>
+                <select id="categoria_pro" name="categoria_pro" class="form-control">
+                    {% for categoria in categoria %}
+                    <option value="{{ categoria.NOMBRE_CAT }}">{{ categoria.NOMBRE_CAT }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group">
+                <label for="estado_pro">Estado:</label>
+                <input type="checkbox" id="estado_pro" name="estado_pro" {% if producto.estado_pro %}checked{% endif %}>
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group">
+                <label for="foto">Foto actual:</label>
+                <img src='/Media/productos/{{ producto.foto_pro }}' alt="Foto actual">
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group">
+                <input type="file" name="foto_pro" class="form-control">
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group">
+                <label for="foto_pro">La imagen debe de tener un tamaño 500px x 500px:</label>
+            </div>
+        </div>
 
-
-      <label for="Categoria">Categoria</label><br>
-        <select id="categoria_pro" name="categoria_pro">
-            {% for categoria in categoria %}
-            
-            <option value="{{ categoria.NOMBRE_CAT }}">{{ categoria.NOMBRE_CAT }}</option>
-            {% endfor %}
-        </select><br>
-
-        <label for="estado_pro">Estado:</label><br>
-        <input type="checkbox" id="estado_pro" name="estado_pro"  {% if producto.estado_pro %}checked{% endif %}><br>
-        <label for="foto">Foto actual:</label><br>
-        <img src='/Media/productos/{{producto.foto_pro }}' style="width: 200px; height: auto;" />
-        <br>
-        <br>
-        <input type="file" name="foto_pro">
-        
-        <label for="foto_pro">La imagen debe de tener un tamaño 500px x 500px:</label><br>
-      
-        <br>
-        <input type="submit" name="action" value="Actualizar">
-        <input type="submit" name="action" value="Eliminar" id="delete-button">
+        <div class="form-buttons">
+            <input type="submit" name="action" value="Actualizar" class="btn">
+            <input type="submit" name="action" value="Eliminar" id="delete-button" class="btn">
+        </div>
         <script>
             document.getElementById('delete-button').addEventListener('click', function(e) {
                 if (!confirm('¿Estás seguro de que quieres eliminar esta categoría?')) {
@@ -54,6 +87,7 @@
                 }
             });
         </script>
- </form>
+    </form>
+</div>
 
 {% endblock Administrador %}
