--- a/LaMarqueza/Templates/Productos.html
+++ b/LaMarqueza/Templates/Productos.html
@@ -102,20 +102,17 @@
                                         <!-- Reseñas -->
                                         <div class="mt-3">
                                             <h5>Reseñas</h5>
-                                            <div class="reseñas-scroll"
-                                                style="max-height: 200px; overflow-y: auto; padding-right: 15px;">
+                                            <div class="reseñas-scroll" style="max-height: 200px; overflow-y: auto; padding-right: 15px;">
                                                 {% for b in resenasquerry %}
                                                 {% if b.ID_PRODUCTO_RE == a.ID_PRODUCTO_PRO %}
                                                 <!--MODAL DE RESEÑA-->
-                                                <div class="card">
-                                                    <div
-                                                        class="card-body d-flex justify-content-between align-items-center">
-                                                        <div>
+                                                <div class="card mb-2 resena-card">
+                                                    <div class="card-body position-relative">
+                                                        <div class="resena-contenedor">
                                                             <h5 class="card-title">{{ b.NOMBRE_USU }}</h5>
                                                             <p class="card-text">{{ b.RESENA_RE }}</p>
                                                         </div>
-                                                        <form action="{% url 'eliminar_resena' b.ID_RESENA_RE %}"
-                                                            method="post">
+                                                        <form action="{% url 'eliminar_resena' b.ID_RESENA_RE %}" method="post" class="delete-button-form">
                                                             {% csrf_token %}
                                                             <button type="submit" class="btn btn-danger btn-sm">
                                                                 <i class="fas fa-trash-alt"></i>
@@ -123,7 +120,6 @@
                                                         </form>
                                                     </div>
                                                 </div>
-                                                
                                                 {% endif %}
                                                 {% endfor %}
                                             </div>
