--- a/LaMarqueza/Templates/Productos.html
+++ b/LaMarqueza/Templates/Productos.html
@@ -40,22 +40,24 @@
                             <div class="modal-body text-center">
                                 <div class="row">
                                     <div class="col-md-6">
-
+                                        
                                         <!-- Botón en forma de corazón -->
                                         <div class="position-relative">
-                                            <form action="{% url 'agregar_favoritos' a.ID_PRODUCTO_PRO %}"
-                                                method="POST">
 
+                                            <form id="favoritos-form-{{ a.ID_PRODUCTO_PRO }}"
+                                            
+                                                action="{% url 'agregar_favoritos' a.ID_PRODUCTO_PRO %}" method="POST">
                                                 {% csrf_token %}
+
                                                 <!-- Botón en forma de corazón -->
                                                 <button type="submit" id="heart-button-{{ a.ID_PRODUCTO_PRO }}"
                                                     class="btn btn-outline-danger position-absolute"
-                                                    style="top: 10px; right: 10px;">
+                                                    style="top: 10px; right: 10px;" onclick="toggleHeart(this)">
                                                     <i class="fas fa-heart"></i>
                                                 </button>
                                                 <img src='/Media/productos/{{a.FOTO_PRO}}' class='modal-image img-fluid'
-                                                    style="width: 200px; height: auto;"
-                                                    onclick="this.closest('form').submit();" />
+                                                    style="width: 200px; height: auto;" />
+
                                             </form>
                                         </div>
 
@@ -72,13 +74,15 @@
                                                 <input type="hidden" name="nombre" value="{{ a.NOMBRE_PRO }}">
 
                                                 <label class="form-label">Ingrese La Cantidad</label>
-                                                <input type="text" name="cantidad" class="form-control cantidad" id="cantidad" min="1" aria-describedby="emailHelp"><br>
+                                                <input type="text" name="cantidad" class="form-control cantidad"
+                                                    id="cantidad" min="1" aria-describedby="emailHelp"><br>
                                                 <div class="cantidadError" style="color: red; display: none;"></div>
-                                                </div>
-                                            <div class="justify-content-center">
-                                                <button type="submit" id="Agregar" class="btn btn-secondary Agregar" disabled>Agregar al carrito</button>
                                             </div>
-                                            
+                                            <div class="justify-content-center">
+                                                <button type="submit" id="Agregar" class="btn btn-secondary Agregar"
+                                                    disabled>Agregar al carrito</button>
+                                            </div>
+
                                         </form>
                                     </div>
                                     <div class="col-md-6">
@@ -90,19 +94,22 @@
                                             <input type="hidden" name="producto" value="{{ a.ID_PRODUCTO_PRO }}">
                                             <div class="mb-3 w-75 mx-auto">
                                                 <label class="form-label">Ingrese su reseña</label>
-                                                <textarea name="resena" class="form-control resena" rows="3" id="resena" required style="resize: none;"></textarea><br>
+                                                <textarea name="resena" class="form-control resena" rows="3" id="resena"
+                                                    required style="resize: none;"></textarea><br>
                                                 <div class="resenaError" style="color: red; display: none;"></div>
-                                        </div>
+                                            </div>
                                             <div class="justify-content-center">
-                                                
-                                                <button type="submit" id="EnviarResena" class="btn btn-primary EnviarResena" disabled>Enviar reseña</button>
-                                               
+
+                                                <button type="submit" id="EnviarResena"
+                                                    class="btn btn-primary EnviarResena" disabled>Enviar reseña</button>
+
                                             </div>
                                         </form>
                                         <!-- Reseñas -->
                                         <div class="mt-3">
                                             <h5>Reseñas</h5>
-                                            <div class="reseñas-scroll" style="max-height: 200px; overflow-y: auto; padding-right: 15px;">
+                                            <div class="reseñas-scroll"
+                                                style="max-height: 200px; overflow-y: auto; padding-right: 15px;">
                                                 {% for b in resenasquerry %}
                                                 {% if b.ID_PRODUCTO_RE == a.ID_PRODUCTO_PRO %}
                                                 <!--MODAL DE RESEÑA-->
@@ -112,7 +119,8 @@
                                                             <h5 class="card-title">{{ b.NOMBRE_USU }}</h5>
                                                             <p class="card-text">{{ b.RESENA_RE }}</p>
                                                         </div>
-                                                        <form action="{% url 'eliminar_resena' b.ID_RESENA_RE %}" method="post" class="delete-button-form">
+                                                        <form action="{% url 'eliminar_resena' b.ID_RESENA_RE %}"
+                                                            method="post" class="delete-button-form">
                                                             {% csrf_token %}
                                                             <button type="submit" class="btn btn-danger btn-sm">
                                                                 <i class="fas fa-trash-alt"></i>
@@ -135,7 +143,8 @@
             {% endfor %}
         </div>
     </div>
-    
+
 </div>
+
 
 {% endblock Boddy %}
