--- a/LaMarqueza/Templates/AdminProductos.html
+++ b/LaMarqueza/Templates/AdminProductos.html
@@ -40,7 +40,7 @@
                                 Desactivado
                             {% endif %}
                         </td>
-                        <td><img src='/Media/productos/{{ productos.FOTO_PRO }}' style="width: 200px; height: auto;" /></td>
+                        <td><img src='/Media/{{ productos.FOTO_PRO }}' style="width: 200px; height: auto;" /></td>
                     </tr>
                 {% endfor %}
             </tbody>
