--- a/LaMarqueza/Templates/CrearProductos.html
+++ b/LaMarqueza/Templates/CrearProductos.html
@@ -62,7 +62,10 @@
 
             <div class="form-group">
                 <label for="estado_pro">Estado:</label>
-                <input type="checkbox" id="estado_pro" name="estado_pro" {% if usuario.is_staff %}checked{% endif %}>
+                <select id="estado_pro" name="estado_pro" class="form-control">
+                    <option value="1">Activo</option>
+                    <option value="0">Inactivo</option>
+                </select>
             </div>
 
             <div class="form-actions">
