--- a/LaMarqueza/Templates/ProductoDetalles.html
+++ b/LaMarqueza/Templates/ProductoDetalles.html
@@ -62,7 +62,7 @@
         <div class="form-row">
             <div class="form-group">
                 <label for="foto">Foto actual:</label>
-                <img src='/Media/productos/{{ producto.foto_pro }}' alt="Foto actual">
+                <img src='/Media/{{ producto.foto_pro }}' alt="Foto actual">
             </div>
         </div>
         <div class="form-row">
